@@ -135,6 +135,7 @@ INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('UseFQDNForNodeNames','1',1,1);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('UseIfXTable','1',1,0);
 INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('UseInterfaceAliases','0',1,0);
+INSERT INTO config (var_name,var_value,is_visible,need_server_restart) VALUES ('UseSNMPTrapsForDiscovery','0',1,1);
 
 /*
 ** Default admin user
