@@ -139,6 +139,7 @@
 #define AF_DB_CONNECTION_LOST                  0x04000000
 #define AF_NO_NETWORK_CONNECTIVITY             0x08000000
 #define AF_EVENT_STORM_DETECTED                0x10000000
+#define AF_SNMP_TRAP_DISCOVERY                 0x20000000
 #define AF_SERVER_INITIALIZED                  0x40000000
 #define AF_SHUTDOWN                            0x80000000
 
