@@ -158,6 +158,7 @@ NetworkDiscoveryConfigurator_SectionGeneral=General
 NetworkDiscoveryConfigurator_SectionGeneralDescr=General network discovery settings
 NetworkDiscoveryConfigurator_SectionUSM=SNMP USM Credentials
 NetworkDiscoveryConfigurator_SectionUSMDescr=SNMP USM credentials used in the network
+NetworkDiscoveryConfigurator_UseSNMPTrapsForDiscovery=Use SNMP trap source addresses for discovery
 OpenMappingTables_Error=Error
 OpenMappingTables_ErrorOpeningView=Error opening view: 
 OpenNetworkDiscoveryConfig_Error=Error
