@@ -19,6 +19,7 @@ public class DiscoveryConfig
 {
 	private boolean enabled;
 	private boolean active;
+	private boolean useSnmpTraps;
 	private int filterFlags;
 	private String filter;
 	private String defaultCommunity;
@@ -50,6 +51,7 @@ public class DiscoveryConfig
 		
 		config.enabled = getBoolean(variables, "RunNetworkDiscovery", false); //$NON-NLS-1$
 		config.active = getBoolean(variables, "ActiveNetworkDiscovery", false); //$NON-NLS-1$
+		config.useSnmpTraps = getBoolean(variables, "UseSNMPTrapsForDiscovery", false); //$NON-NLS-1$
 		config.filterFlags = getInteger(variables, "DiscoveryFilterFlags", 0); //$NON-NLS-1$
 		config.filter = getString(variables, "DiscoveryFilter", "none"); //$NON-NLS-1$ //$NON-NLS-2$
 		config.defaultCommunity = getString(variables, "DefaultCommunityString", "public"); //$NON-NLS-1$ //$NON-NLS-2$
@@ -133,11 +135,12 @@ public class DiscoveryConfig
 	 */
 	public void save(NXCSession session) throws NXCException, IOException
 	{
-		session.setServerVariable("RunNetworkDiscovery", enabled ? "1" : "0");
-		session.setServerVariable("ActiveNetworkDiscovery", active ? "1" : "0");
-		session.setServerVariable("DiscoveryFilterFlags", Integer.toString(filterFlags));
-		session.setServerVariable("DiscoveryFilter", filter);
-		session.setServerVariable("DefaultCommunityString", defaultCommunity);
+		session.setServerVariable("RunNetworkDiscovery", enabled ? "1" : "0"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+		session.setServerVariable("ActiveNetworkDiscovery", active ? "1" : "0"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+      session.setServerVariable("UseSNMPTrapsForDiscovery", useSnmpTraps ? "1" : "0"); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+		session.setServerVariable("DiscoveryFilterFlags", Integer.toString(filterFlags)); //$NON-NLS-1$
+		session.setServerVariable("DiscoveryFilter", filter); //$NON-NLS-1$
+		session.setServerVariable("DefaultCommunityString", defaultCommunity); //$NON-NLS-1$
 		
 		session.setAddressList(NXCSession.ADDRESS_LIST_DISCOVERY_FILTER, addressFilter);
 		session.setAddressList(NXCSession.ADDRESS_LIST_DISCOVERY_TARGETS, targets);
@@ -290,4 +293,20 @@ public class DiscoveryConfig
 	{
 		this.usmCredentials = usmCredentials;
 	}
+
+   /**
+    * @return the useSnmpTraps
+    */
+   public boolean isUseSnmpTraps()
+   {
+      return useSnmpTraps;
+   }
+
+   /**
+    * @param useSnmpTraps the useSnmpTraps to set
+    */
+   public void setUseSnmpTraps(boolean useSnmpTraps)
+   {
+      this.useSnmpTraps = useSnmpTraps;
+   }
 }
