@@ -11,9 +11,10 @@
 - Table DCIs can be used in condition objects
 - nxapush can push data on behalf of other nodes
 - Transformation script can be run on aggregated DCIs
+- Unknown SNMP trap sources can be automatically added as nodes
 - Management console:
 	- New command line option -fullscreen
-- Fixed issues: #150, #226, #364, #366, #373, #378, #384, #387, #390, $401,
+- Fixed issues: #150, #226, #307, #364, #366, #373, #378, #384, #387, #390, $401,
                 #410, #414, #416, #419, #440
 
 
